feat: add queries @media max: 1310, 1170

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                 <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
                 <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
               </ul>
-              <div class="projects__slider-btn-next"></div>
+              <div class="projects__slider-btn projects__slider-btn_next"></div>
+              <div class="projects__slider-btn projects__slider-btn_prev"></div>
             </div>
           </div>
           <div class="projects__addition-info">
@@ -299,78 +300,80 @@
           </div>
           <div class="fantasy__gallery">
             <div class="fantasy__gallery-block">
-              <img class="fantasy__gallery-img1" src="./assets/img/style-1.png" alt="Empire"><img
-                class="fantasy__gallery-img2" src="./assets/img/style-2.png" alt="Classical">
+              <img class="fantasy__gallery-img fantasy__gallery-img_1" src="./assets/img/style-1.png" alt="Empire"><img
+                class="fantasy__gallery-img fantasy__gallery-img_2" src="./assets/img/style-2.png" alt="Classical">
             </div>
             <div class="fantasy__gallery-block">
-              <img class="fantasy__gallery-img3" src="./assets/img/style-3.png" alt="Loft"><img
-                class="fantasy__gallery-img4" src="./assets/img/style-4.png" alt="Minimalism">
+              <img class="fantasy__gallery-img fantasy__gallery-img_3" src="./assets/img/style-3.png" alt="Loft"><img
+                class="fantasy__gallery-img fantasy__gallery-img_4" src="./assets/img/style-4.png" alt="Minimalism">
             </div>
           </div>
         </div>
       </section>
-      <section class="design-project section-wrapper">
-        <div class="design-project__title">
-          <h2 id="measurment">design project</h2>
-          <div class="section__title-icon"></div>
-        </div>
-        <p class="design-project__txt">Design project not only helps to make the repair of your apartment more
-          modern,<br>
-          but also significantly reduces the cost of materials and reduces the time of repair work.
-        </p>
-        <div class="design-project__gallery">
-          <div class="col">
-            <img src="./assets/img/types-repair-img-1.png" alt="types-repair-img-1">
-            <div class="col__txt-block">
-              <h3>Mini</h3>
-              <ul>
-                <li><span></span>Measurement drawing</li>
-                <li><span></span>Redevelopment</li>
-                <li><span></span>Layout of furniture</li>
-                <li><span></span>Plumbing plan. equipment</li>
-              </ul>
-              <div class="endnote">
-                <p>150 rub / m2</p>
+      <section class="design-project">
+        <div class="section-wrapper">
+          <div class="design-project__title">
+            <h2 id="measurment">design project</h2>
+            <div class="section__title-icon"></div>
+          </div>
+          <p class="design-project__txt">Design project not only helps to make the repair of your apartment more
+            modern,<br>
+            but also significantly reduces the cost of materials and reduces the time of repair work.
+          </p>
+          <div class="design-project__gallery">
+            <div class="col">
+              <img src="./assets/img/types-repair-img-1.png" alt="types-repair-img-1">
+              <div class="col__txt-block">
+                <h3>Mini</h3>
+                <ul>
+                  <li><span></span>Measurement drawing</li>
+                  <li><span></span>Redevelopment</li>
+                  <li><span></span>Layout of furniture</li>
+                  <li><span></span>Plumbing plan. equipment</li>
+                </ul>
+                <div class="endnote">
+                  <p>150 rub / m2</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col">
-            <img src="./assets/img/types-repair-img-3.png" alt="types-repair-img-2">
-            <div class="col__txt-block">
-              <h3>Standard</h3>
-              <ul>
-                <li><span></span>Measurement drawing</li>
-                <li><span></span>Redevelopment</li>
-                <li><span></span>Layout of furniture</li>
-                <li><span></span>Plan of ceilings</li>
-                <li><span></span>Floor Plan</li>
-                <li><span></span>Electricians plan</li>
-                <li><span></span>Lighting plan</li>
-              </ul>
-              <div class="endnote">
-                <p>400 rub / m2</p>
+            <div class="col">
+              <img src="./assets/img/types-repair-img-3.png" alt="types-repair-img-2">
+              <div class="col__txt-block">
+                <h3>Standard</h3>
+                <ul>
+                  <li><span></span>Measurement drawing</li>
+                  <li><span></span>Redevelopment</li>
+                  <li><span></span>Layout of furniture</li>
+                  <li><span></span>Plan of ceilings</li>
+                  <li><span></span>Floor Plan</li>
+                  <li><span></span>Electricians plan</li>
+                  <li><span></span>Lighting plan</li>
+                </ul>
+                <div class="endnote">
+                  <p>400 rub / m2</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col">
-            <img src="./assets/img/types-repair-img-2.png" alt="types-repair-img-3">
-            <div class="col__txt-block">
-              <h3>Full</h3>
-              <ul>
-                <li><span></span>Measurement drawing</li>
-                <li><span></span>Redevelopment</li>
-                <li><span></span>Layout of furniture</li>
-                <li><span></span>Plan of ceilings</li>
-                <li><span></span>Floor Plan</li>
-                <li><span></span>Electricians plan</li>
-                <li><span></span>Wall reamers</li>
-                <li><span></span>3D visualization</li>
-                <li><span></span>Bill of materials</li>
-                <li><span></span>Departure for a selection of materials</li>
-                <li><span></span>Furniture selection</li>
-              </ul>
-              <div class="endnote">
-                <p>900 rub / m2</p>
+            <div class="col">
+              <img src="./assets/img/types-repair-img-2.png" alt="types-repair-img-3">
+              <div class="col__txt-block">
+                <h3>Full</h3>
+                <ul>
+                  <li><span></span>Measurement drawing</li>
+                  <li><span></span>Redevelopment</li>
+                  <li><span></span>Layout of furniture</li>
+                  <li><span></span>Plan of ceilings</li>
+                  <li><span></span>Floor Plan</li>
+                  <li><span></span>Electricians plan</li>
+                  <li><span></span>Wall reamers</li>
+                  <li><span></span>3D visualization</li>
+                  <li><span></span>Bill of materials</li>
+                  <li><span></span>Departure for a selection of materials</li>
+                  <li><span></span>Furniture selection</li>
+                </ul>
+                <div class="endnote">
+                  <p>900 rub / m2</p>
+                </div>
               </div>
             </div>
           </div>
