feat: @media from 768px to 375px is done

--- a/index.html
+++ b/index.html
@@ -122,15 +122,16 @@
             <div class="section__title-icon"></div>
           </div>
           <div class="on-control__video">
-            <iframe src="https://www.youtube.com/embed/FEmNHefGbvA" frameborder="0"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+            <iframe src="https://www.youtube.com/embed/Zoll-_mpEwg"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope;"></iframe>
             <div class="on-control__video-overlay"></div>
             <div class="btn-play">
               <div></div>
             </div>
           </div>
           <p class="on-control__txt">
-            At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you
+            At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time,
+            you
             can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast
             from one of our facilities!<br>Leave a request below and you will receive a link to the broadcast.
           </p>
@@ -146,7 +147,7 @@
                   <input type="number" id="phone" placeholder="Your phone number:">
                 </fieldset>
               </div>
-              <button type="submit">Submit</button>
+              <button class="btn-desktop" type="submit">Submit</button>
             </div>
             <fieldset class="form__checkbox">
               <label class="form__checkbox-label" for="agree">
@@ -155,6 +156,7 @@
                 I agree to the processing of personal data
               </label>
             </fieldset>
+            <button class="btn-mob" type="submit">Submit</button>
           </form>
         </div>
       </section>
@@ -436,12 +438,13 @@
         </div>
       </section>
       <section class="team">
-        <div id="team" class="team__inner">
+        <div id="team" class="team__inner section-wrapper">
           <div class="team__title">
             <h2>our team</h2>
             <div class="section__title-icon"></div>
           </div>
-          <p class="team__title-txt">Our team has helped to become happier for more than<br>500 families and we are not
+          <p class="team__title-txt">Our team has helped to become happier for more than<br>500 families and we are
+            not
             going to stop
           </p>
           <div class="team__members">
@@ -501,7 +504,8 @@
                   <h3>Fedosova Maria Konstantinovna</h3>
                 </div>
                 <p class="clients__card-txt">
-                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
+                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that
+                  i
                   referred to the repair as to my own. Great thanks i express the project to georgia for its
                   professionalism and approach. The repair process was turned out in terms, faster than anticipated.
                   Team
@@ -521,7 +525,8 @@
                   <h3>Afanasyev Sergey Alexandrovich</h3>
                 </div>
                 <p class="clients__card-txt">
-                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
+                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that
+                  i
                   referred to the repair as to my own. Great thanks i express the project to georgia for its
                   professionalism and approach. The repair process was turned out in terms, faster than anticipated.
                   Team
@@ -541,7 +546,8 @@
                   <h3>Kiriev Egor Leonidovich</h3>
                 </div>
                 <p class="clients__card-txt">
-                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that i
+                  I want to thank the guys for their work. We put your shower part in repair. I am very grateful that
+                  i
                   referred to the repair as to my own. Great thanks i express the project to georgia for its
                   professionalism and approach. The repair process was turned out in terms, faster than anticipated.
                   Team
