feat: add interactive. Task is DONE

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div>
             <div class="projects__slider">
               <ul class="projects__units">
-                <li class="projects__units-1 projects__units-1_active">Rostov-on-Don, Admiral</li>
+                <li class="projects__units-1">Rostov-on-Don, Admiral</li>
                 <li class="projects__units-2">Sochi Thieves</li>
                 <li class="projects__units-3">Rostov-on-Don Patriotic</li>
               </ul>
