perf: a lot of minor changes in CSS

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <li class="projects__units-3">Rostov-on-Don Patriotic</li>
               </ul>
               <ul class="projects__slider-img">
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-1"></li>
+                <li class="active"><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-1"></li>
                 <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-2"></li>
                 <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
                 <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
@@ -302,7 +302,7 @@
           </div>
           <div class="fantasy__gallery-wrapper">
             <ul class="fantasy__gallery">
-              <li class="fantasy__gallery-img fantasy__gallery-img_1">
+              <li class="fantasy__gallery-img fantasy__gallery-img_1 gallery-img-active">
                 <img src="./assets/img/style-1.png" alt="Empire">
               </li>
               <li class="fantasy__gallery-img fantasy__gallery-img_2">
